# snn-voice-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: SNN_sound.ipynb  mnist.ipynb  requirements.txt  speech_command_recognition_with_torchaudio_tutorial.ipynb  test_flight.ipynb
